--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h3 {
 nav {
   float: left;
   margin-top: 0px;
-  padding-top:40px;
+  padding-top:20px;
 }
 
 nav a {
@@ -172,9 +172,10 @@ h3, h2 {
 }
 
 .auth-image {
-  float: left;
-  width: 200px;
+  width: 100%;
+  max-width:200px;
   height: auto;
+  float: left;
   margin-top: 10px;
   margin-right: 25px;
 }
@@ -213,4 +214,41 @@ input[type=submit] {
   cursor: pointer;
   background: #4aaaa5;
   border: 0 none;
+}
+
+@media screen and (max-width: 640px) {
+
+  #masthead {
+    position:static;
+  }
+
+  #main-container {
+    margin-top:-120px;
+  }
+
+  nav {
+    width:75%;
+    margin-bottom:10px;
+  }
+
+  #logo {
+    width: 100%;
+    margin-top:0px;
+    margin-left:0px;
+  }
+
+  .main-section {
+    width: 100%;
+    margin-left: 0px;
+  }
+
+  .auth-image {
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    margin-bottom:15px;
+  }
+  .work {
+    width:100%;
+  }
 }
