--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ h3 {
   background: #4aaaa5;
 }
 
-nav {
+/* nav {
   float: left;
   margin-top: 0px;
   padding-top:20px;
@@ -99,7 +99,7 @@ nav a {
 
 nav a:first-child {
   border-left: 0 none;
-}
+} */
 
 /* footer */
 
@@ -123,7 +123,7 @@ h3, h2 {
 /* main */
 
 #main-container {
-  padding-top: 130px;
+  padding-top: 30px;
   min-height: calc(100vh - 70px);
 }
 
@@ -216,9 +216,9 @@ input[type=submit] {
   border: 0 none;
 }
 
-@media screen and (max-width: 640px) {
+/* @media screen and (max-width: 640px) {
 
-  #masthead {
+   #masthead {
     position:static;
   }
 
@@ -251,4 +251,4 @@ input[type=submit] {
   .work {
     width:100%;
   }
-}
+}  */
